# esp32-hal

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  flash  memory.x  openocd.cfg  partitions.csv  ram.x  rom.x
.cargo/: config
esp32/: Cargo.toml  esp32.svd  memory.x
esp32/examples/: led.rs
esp32/src/: gpio.rs  lib.rs
esp32/src/gpio/: gpio_enable1_reg.rs  gpio_enable1_w1tc_reg.rs  gpio_enable1_w1ts_reg.rs  gpio_enable_reg.rs  gpio_enable_w1tc_reg.rs  gpio_enable_w1ts_reg.rs  gpio_func_in_sel_cfg.rs  gpio_func_out_sel_cfg.rs  gpio_in1_reg.rs  gpio_in_reg.rs  gpio_out1_reg.rs  gpio_out1_w1tc_reg.rs  gpio_out1_w1ts_reg.rs  gpio_out_reg.rs  gpio_out_w1tc_reg.rs  gpio_out_w1ts_reg.rs
esp32/src/gpio/gpio_func_in_sel_cfg/: gpio_func_in_sel_cfg_reg.rs
esp32/src/gpio/gpio_func_out_sel_cfg/: gpio_func_out_sel_cfg_reg.rs
examples/: adc.rs  alloc.rs  blinky.rs  dac.rs  exception.rs  gpio.rs  hall.rs  i2c.rs  ledc.rs  leds.rs  mem.rs  multicore.rs  ram.rs  rtccntl.rs  serial.rs  spi.rs  timer.rs  watchdog.rs
procmacros/: Cargo.toml
procmacros/src/: lib.rs
src/: alloc.rs  cpu.rs  delay.rs  dport.rs  dprint.rs  efuse.rs  external_ram.rs  gpio.rs  i2c.rs  interrupt.rs  lib.rs  lock_execute.rs  mem.rs  memory.rs  prelude.rs  rom.rs  rtc_clk.rs  serial.rs  spi.rs  units.rs
src/analog/: adc.rs  config.rs  dac.rs  hall.rs  mod.rs
src/clock_control/: config.rs  cpu.rs  dfs.rs  mod.rs  pll.rs  watchdog.rs
src/gpio/: mod.rs  mux.rs
src/ledc/: channel.rs  mod.rs  timer.rs
src/timer/: mod.rs  watchdog.rs
