[package]
name = "esp32-hal"
version = "0.1.0"
authors = ["Scott Mabin <scott@mabez.dev>", "Arjan Mels <arjan@mels.email>"]
edition = "2018"


# Allow overriding of `memcpy`, `memset`, etc.
[package.metadata.cargo-xbuild]
memcpy = false


[features]
default = ["mem", "rt"]

# Place program completely in RAM (needed when e.g. using only ROM bootloader, or for debugging).
all_in_ram = []

# Allow use of external RAM. (Needs customized bootloader.)
external_ram = ["esp32-hal-proc-macros/external_ram"]

# Add support for global allocator.
alloc = ["linked_list_allocator"]

# Define `memcpy`, `memset`, etc. as replacement of standard functions.
mem = []

# Enable the `rt` feature of the `esp32` crate.
rt = ["esp32/rt", "xtensa-lx6-rt"]


[dependencies]
esp32-hal-proc-macros = { path = "procmacros" }

xtensa-lx6-rt = { version = "0.3.0", optional = true }
xtensa-lx6 = "0.2.0"
esp32 = "0.5.0"
bare-metal = "0.2"
nb = "0.1.2"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
linked_list_allocator = { version = "0.8.4", optional = true, default-features = false, features = ["alloc_ref"] }
void = { version = "1.0.2", default-features = false }

[dev-dependencies]
panic-halt = "0.2.0"

[[example]]
name = "alloc"
required-features = ["alloc"]

[[example]]
name = "mem"
required-features = ["alloc"]
