[package]
name = "esp32-hal"
version = "0.2.0"
description = "A Hardware abstraction layer for Espressif's ESP32 WiFi microcontroller."
authors = ["Scott Mabin <scott@mabez.dev>", "Arjan Mels <arjan@mels.email>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["xtensa", "esp32", "hal", "esp"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/esp-rs/esp32-hal"
edition = "2018"


# Allow overriding of `memcpy`, `memset`, etc.
[package.metadata.cargo-xbuild]
memcpy = false


[features]
default = ["mem", "rt"]

# Place program completely in RAM (needed when e.g. using only ROM bootloader, or for debugging).
all_in_ram = []

# Allow use of external RAM. (Needs customized bootloader.)
external_ram = ["esp32-hal-proc-macros/external_ram"]

# Add support for global allocator.
alloc = ["linked_list_allocator"]

# Define `memcpy`, `memset`, etc. as replacement of standard functions.
mem = []

# Enable the `rt` feature of the `esp32` crate.
rt = ["esp32/rt", "xtensa-lx-rt"]


[dependencies]
esp32-hal-proc-macros = { version = "=0.2.0", path = "procmacros" }

xtensa-lx-rt = { version = "0.5.0", optional = true, features = ["lx6"] }
xtensa-lx = { version = "0.3.0", features = ["lx6"]}
esp32 = "0.10.0"
bare-metal = "0.2"
nb = "0.1.2"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
linked_list_allocator = { version = "=0.8.11", optional = true, default-features = false, features = ["alloc_ref"] }
void = { version = "1.0.2", default-features = false }

[dev-dependencies]
panic-halt = "0.2.0"
ili9341 = { version = "0.3.0", features = ["graphics"] }
ssd1306 = "0.3.1"
embedded-graphics = "0.6.2"
mpu6050 = "0.1.3"
sgp30 = "0.2.1"

[[example]]
name = "alloc"
required-features = ["alloc"]

[[example]]
name = "mem"
required-features = ["alloc"]
