  
[package]
authors = ["Arjan Mels <arjan@mels.email>"]
categories = ["embedded", "no-std"]
description = "Attributes re-exported in `esp32-hal`"
keywords = ["esp32", "esp32-hal", "runtime", "startup"]
license = "MIT OR Apache-2.0"
name = "esp32-hal-proc-macros"
repository = "https://github.com/esp-rs/xtensa-lx6-rt"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.10"
syn = {version = "1.0", features = ["extra-traits", "full"]}

